--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -182,8 +182,8 @@
             {%- endif -%} 
           {%- endfor -%}
         {%- else -%}
-          <a class="menu-link {% if url == '/' %}active{% endif %}" href="/">home</a>
-          <a class="menu-link {% if url == '/about/' %}active{% endif %}" href="/about">about</a>
+          <!-- <a class="menu-link {% if url == '/' %}active{% endif %}" href="/">home</a> -->
+          <!-- <a class="menu-link {% if url == '/about/' %}active{% endif %}" href="/about">about</a> -->
         {%- endif -%}
         <a class="menu-link rss" href="/feed.xml">
           <svg
