--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -32,9 +32,15 @@ layout: compress
     <main aria-label="Content">
       <div class="not-found">
         <div class="container">
+          
+          <img
+          height="200"
+          width="200"
+          alt="Seems you are lost"
+          src="/assets/img/404.png"/>
+
           <div class="title">404</div>
-          <p class="phrase">😕 Hmm... Seems you lost from my journey.</p>
-          <a class="solution" href="{{ site.url }}">back home</a>
+          <br/>
         </div>
       </div>
     </main>  
