--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -40,7 +40,7 @@ $narrow-size: 720px;
 
 // Padding unit
 $spacing-full: 30px;
-$spacing-half: $spacing-full / 2;
+$spacing-half: 15px;
 
 // State of devices
 $on-mobile: 768px;
